# icebreak_demo

./: .gitignore  README.md  edges.py  graph.py  langgraph.json  log_viewer.sh  main.py  models.py  nodes.py  pyproject.toml  requirements.txt  script_utils.py  state.py  test_graph.py
common/: models.py
ice_break_agent/: __main__.py  edges.py  graph.py  langgraph.json  main.py  nodes.py  prompts.py  state.py
ice_break_agent/examples/: example_script.json
langgraph_academy/module-1/: agent.ipynb
langgraph_academy/module-2/state_db/: example.db
other_script/: input_data.json  剧本内容生产_dify.py  剧本测试 2_Wendy.py
other_script/outputs/A Useless Obstacle's Plea_暴雨夜的顶层公寓里，角色通过跪地擦拭、故意..._20250929_151933/: content.md  name.txt  plot1_prompt.json  plot2_prompt.json  script.json  script_readable.json  summary.md
personality_agent/: __init__.py  constants.py  graph.py  main.py  node.py  prompts.py  run.py  state.py
